kubernetes/apps/flux-system/instance/ks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-webhook
spec:
  ingressClassName: external
  rules:
    - host: &host "flux-webhook.kantai.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
